--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,166 +1,51 @@
-#验证CDK
-sign: ''
 
-#全局消息设置
-#消息前缀
-prefix: '&b[RE]'
-#关闭分析器消息
-close: '&a您关闭了附魔分离器'
-
-#分离附魔消息
-#金币不够
-money1Not: '&a您的金币不够!需要%money1%'
-#花费金币(%money1%不是变量，仅仅为替换符)
-money1Yes: '&a您花费了金币%money1%分离附魔!'
-#花费等级(%level1%不是变量，仅仅为替换符)
-level1Yes: '&a您花费了等级%level1%分离附魔!'
-#等级不足(%level1%不是变量，仅仅为替换符)
-level1Not: '&a等级不足%level1%级!'
-#点券不够
-points1Not: '&a您的点券不够!需要%points1%'
-#点券花费金币(%points1%不是变量，仅仅为替换符)
-points1Yes: '&a您花费了点券%points1%分离附魔!'
-
-#洗去附魔消息
-#金币不够
-money2Not: '&a您的金币不够!需要%money2%'
-#花费金币(%money2%不是变量，仅仅为替换符)
-money2Yes: '&a您花费了金币%money2%洗去附魔!'
-#花费等级(%level2%不是变量，仅仅为替换符)
-level2Yes: '&a您花费了等级%level2%洗去附魔!'
-#等级不足(%level2%不是变量，仅仅为替换符)
-level2Not: '&a等级不足%level2%级!'
-#点券不够
-points2Not: '&a您的点券不够!需要%points2%'
-#点券花费金币(%points2%不是变量，仅仅为替换符)
-points2Yes: '&a您花费了点券%points2%洗去附魔!'
-
-#分离失败
-fenliFail: '&a分离失败了……'
-#洗去附魔失败
-washFail: '&a洗去附魔失败了……'
-#不允许放入附魔分析器
-notAllow: '&a该物品无法放入附魔分析器!'
-
-#带此Lore的物品无法分析附魔
-Lore: '&b不可放入附魔分析器'
-
-#附魔黑名单
-#下列附魔无法被识别分析，也就无法分离/洗去
-#具体附魔类型请前往插件文档查看or官方API查看
-noRemove:
+# 附魔黑名单
+# 下列附魔无法被识别分析，也就无法分离/洗去
+# 具体附魔类型请前往插件文档查看or官方API查看
+noRemoveEnchants:
   - 'ARROW_DAMAGE'
   - 'DIG_SPEED'
+# 带此Lore的物品无法分析附魔
+noRemoveLore: '&b不可放入附魔分析器'
 
-#分离附魔是否开启金币消耗
-money: false
-#分离附魔是否开启等级消耗
-level: false
-#分离附魔是否开启点卷消耗
-points: false
+# 分离附魔消耗等级
+splitCostExperience: true
+# 分离附魔消耗金币 (需要Vault)
+splitCostMoney: false
+# 分离附魔消耗点卷 (需要PlayerPoints)
+splitCostPoints: false
 
-#洗去附魔是否开启金币消耗
-money2: false
-#洗去附魔是否开启等级消耗
-level2: false
-#洗去附魔是否开启点卷消耗
-points2: false
+# 洗去附魔消耗等级
+grindCostExperience: true
+# 洗去附魔消耗金币 (需要Vault)
+grindCostMoney: false
+# 洗去附魔消耗点卷 (需要PlayerPoints)
+grindCostPoints: false
 
-#权限节点设置
-#下面限制了每个权限能够一次分析出的附魔的数量
-#就是每次手持物品打开GUI后显示的附魔的最多数量
-#默认(无任何自定义下列权限所显示的数量)
-default: 1
-#默认分离附魔金币消耗数
-money_amount: 100
-#默认分离附魔等级消耗数
-level_amount: 10
-#默认分离附魔点卷消耗数
-points_amount: 10
 
-#默认洗去附魔金币消耗数
-money_amount2: 100
-#默认洗去附魔等级消耗数
-level_amount2: 10
-#默认分离附魔点卷消耗数
-points_amount2: 10
-#默认分离附魔成功率(100为一定成功)
-R_success_rate: 100
-#默认洗去附魔成功率(100为一定成功)
-T_success_rate: 100
+#############
+# 默认权限设置 #
+#############
 
-#自定义权限节点部分
-#建议每个玩家只能拥有其中一个权限!
-#注意！权限组的优先级从上到下依次递减，也就是说玩家如果同时有p1和p2的权限，那么会匹配p1权限的内容!
-permissions:
-  #以此类推p1,p2,p3……
-  p1:
-    #权限名(只能是小写字母+下划线)
-    name: 're_test1'
-    #支持的最大数量
-    num: 2
-    #该权限组分离附魔所花费的金币
-    money1: 100
-    #该权限组分离附魔所花费的点券
-    points1: 10
-    #该权限组分离附魔所花费的等级
-    level1: 1
-    ################
-    #该权限组洗去附魔所花费的金币
-    money2: 100
-    #该权限组洗去附魔所花费的等级
-    level2: 1
-    #该权限组分离附魔所花费的等级
-    points2: 1
-    #################
-    #该权限组分离附魔的成功率
-    rsuccess: 30
-    #该权限组洗去附魔的成功率
-    wsuccess: 30
-  p2:
-    #权限名(只能是小写字母+下划线)
-    name: 're_test2'
-    #支持的最大数量
-    num: 3
-    #该权限组分离附魔所花费的金币
-    money1: 100
-    #该权限组分离附魔所花费的点券
-    points1: 10
-    #该权限组分离附魔所花费的等级
-    level1: 1
-    ################
-    #该权限组洗去附魔所花费的金币
-    money2: 100
-    #该权限组洗去附魔所花费的等级
-    level2: 1
-    #该权限组分离附魔所花费的等级
-    points2: 1
-    #################
-    #该权限组分离附魔的成功率
-    rsuccess: 30
-    #该权限组洗去附魔的成功率
-    wsuccess: 30
-  p3:
-    #权限名(只能是小写字母+下划线)
-    name: 're_test3'
-    #支持的最大数量
-    num: 5
-    #该权限组分离附魔所花费的金币
-    money1: 100
-    #该权限组分离附魔所花费的点券
-    points1: 10
-    #该权限组分离附魔所花费的等级
-    level1: 1
-    ################
-    #该权限组洗去附魔所花费的金币
-    money2: 100
-    #该权限组洗去附魔所花费的等级
-    level2: 1
-    #该权限组分离附魔所花费的等级
-    points2: 1
-    #################
-    #该权限组分离附魔的成功率
-    rsuccess: 30
-    #该权限组洗去附魔的成功率
-    wsuccess: 30
+# 此设置限制了一次能够分析出来的附魔的数量,最少为1
+visibleEnchantmentsCount: 3
+
+# 分离附魔等级消耗数
+splitExperienceCost: 5
+# 分离附魔金币消耗数
+splitMoneyCost: 500
+# 分离附魔点卷消耗数
+splitPointsCost: 5
+
+# 洗去附魔等级消耗数
+grindExperienceCost: 1
+# 洗去附魔金币消耗数
+grindMoneyCost: 100
+# 分离附魔点卷消耗数
+grindPointsCost: 1
+
+# 分离附魔成功率（百分率，100为一定成功）
+splitSuccessRate: 100
+# 洗去附魔成功率（百分率，100为一定成功）
+grindSuccessRate: 100
 
