--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <res>${project.basedir}/res/</res>
-    <java.version>17</java.version>
+    <java.version>${java.version}</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
