--- a/src/main/resources/message.yml
+++ b/src/main/resources/message.yml
@@ -9,9 +9,9 @@ gui:
 command-no-permission: "&c没有使用权限" 
 command-unknown: "&e未知的命令"
 command-resolving: 正在处理指令……
-        
+
 command-help:
-   no-permission: "&c没有权限……" 
+   no-permission: "&c没有权限……"
    general: |-
       用法：/{} [gui|help|reload|debug]
       用法：/esgui [player]
@@ -40,12 +40,12 @@ console-message:
    plugin-loading: 正在加载插件
    plugin-enabled: 插件已完成加载
    plugin-disabled: 插件已退出
-   invalid-plugin-config: >-
-      插件的配置文件没有正确配置
+   invalid-plugin-config: |-
+      插件的配置文件没有正确配置。
       这可能是因为其中含有语法错误，或者缺失了必要的配置。
       尝试修正配置，并在这之后使用 &b/esplitter reload&r 重新载入配置文件。
    plugin-config-loaded: 配置文件加载成功！
-   plugin-config-load-fail: >-
+   plugin-config-load-fail: |-
       插件配置有误，请检查配置文件是否正确。
       在确认无误后，可以使用 &b/esplitter reload&r 重新加载。
    plugin-message-config-reloading: 正在加载聊天消息
