--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,11 @@
       <version>26.0.1</version>
       <scope>provided</scope>
     </dependency>
+  
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
   </dependencies>
 </project>
